deployments/kubernetes/amazon-crawler-api/overlays/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: amazon-crawler-api
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - ser967362906644-70309f35
